--- a/app/src/main/res/layout/activity_employee_details.xml
+++ b/app/src/main/res/layout/activity_employee_details.xml
@@ -161,7 +161,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Emp Age"
+                    android:text="Bank Branch"
                     android:textColor="@color/black"
                     android:textSize="15sp"
 
@@ -176,7 +176,7 @@
                 android:layout_weight="1.4">
 
                 <TextView
-                    android:id="@+id/tvEmpAge"
+                    android:id="@+id/tvBankBranch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
