--- a/app/src/main/res/layout/update_dialog.xml
+++ b/app/src/main/res/layout/update_dialog.xml
@@ -14,7 +14,7 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/etEmpAge"
+        android:id="@+id/etBankBranch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
