--- a/app/src/main/res/layout/activity_bank_details.xml
+++ b/app/src/main/res/layout/activity_bank_details.xml
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22" />
+        app:layout_constraintVertical_bias="0.142" />
 
     <Button
         android:id="@+id/btnDelete"
@@ -42,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="147dp"
         android:text="Delete"
+        android:backgroundTint="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btnUpdate"
@@ -53,6 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="147dp"
         android:text="Update"
+        android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toStartOf="@+id/btnDelete"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
