--- a/app/src/main/res/layout/activity_bank_insertion.xml
+++ b/app/src/main/res/layout/activity_bank_insertion.xml
@@ -84,7 +84,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Save Data"
+        android:text="Add"
+        android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etBankAmount" />
