--- a/app/src/main/res/layout/activity_bank_details.xml
+++ b/app/src/main/res/layout/activity_bank_details.xml
@@ -139,7 +139,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/divider_grey">
+                android:background="@color/light_pink">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -189,7 +189,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/divider_grey">
+                android:background="@color/light_pink">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -243,7 +243,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/divider_grey">
+                android:background="@color/light_pink">
 
                 <TextView
                     android:layout_width="match_parent"
