--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="pink">#DA00FF</color>
+    <color name="light_pink">#F5B8FF</color>
     <color name="green">#00FF00</color>
     <color name="Darkgreen">#E41B8E00</color>
     <color name="lighBlue">#3F51B5</color>
