--- a/app/src/main/res/layout/bank_update_dialog.xml
+++ b/app/src/main/res/layout/bank_update_dialog.xml
@@ -30,6 +30,15 @@
         android:hint="Employee Salary"
         android:inputType="textPersonName" />
 
+    <EditText
+        android:id="@+id/etCardCvv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="CVV"
+        android:inputType="textPersonName" />
+
     <Button
         android:id="@+id/btnUpdateData"
         android:layout_width="wrap_content"
