--- a/app/src/main/res/layout/activity_bank_details.xml
+++ b/app/src/main/res/layout/activity_bank_details.xml
@@ -109,7 +109,7 @@
                 android:visibility="invisible">
 
                 <TextView
-                    android:id="@+id/tvBankId"
+                    android:id="@+id/tvCardId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -146,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Bank Name"
+                    android:text="Card Name"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
 
@@ -158,7 +158,7 @@
                 android:layout_weight="1.4">
 
                 <TextView
-                    android:id="@+id/tvBankName"
+                    android:id="@+id/tvCardName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -196,7 +196,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Bank Branch"
+                    android:text="Card Number"
                     android:textColor="@color/black"
                     android:textSize="15sp"
 
@@ -211,7 +211,7 @@
                 android:layout_weight="1.4">
 
                 <TextView
-                    android:id="@+id/tvBankBranch"
+                    android:id="@+id/tvCardNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -251,7 +251,7 @@
                     android:layout_gravity="center"
 
                     android:gravity="center"
-                    android:text="Bank Amount"
+                    android:text="Card Date"
                     android:textColor="@color/black"
                     android:textSize="15sp"
 
@@ -266,7 +266,7 @@
                 android:layout_weight="1.4">
 
                 <TextView
-                    android:id="@+id/tvBankAmount"
+                    android:id="@+id/tvCardDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
