--- a/app/src/main/res/layout/activity_bank_insertion.xml
+++ b/app/src/main/res/layout/activity_bank_insertion.xml
@@ -46,40 +46,40 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/etBankName"
+        android:id="@+id/etCardName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:ems="10"
-        android:hint="Bank Name"
+        android:hint="Card Name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
-        android:id="@+id/etBankBranch"
+        android:id="@+id/etCardNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:ems="10"
-        android:hint="Branch"
-        android:inputType="textPersonName"
+        android:hint="Card Number"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etBankName" />
+        app:layout_constraintTop_toBottomOf="@+id/etCardName" />
 
     <EditText
-        android:id="@+id/etBankAmount"
+        android:id="@+id/etCardDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Account Amount"
-        android:inputType="textPersonName"
+        android:hint="Exp Date"
+        android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etBankBranch" />
+        app:layout_constraintTop_toBottomOf="@+id/etCardNumber" />
 
     <EditText
         android:id="@+id/etCardCvv"
@@ -87,7 +87,7 @@
         android:layout_height="38dp"
         android:ems="10"
         android:hint="CVV"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.561"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,5 +102,5 @@
         android:backgroundTint="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etBankAmount" />
+        app:layout_constraintTop_toBottomOf="@+id/etCardDate" />
 </androidx.constraintlayout.widget.ConstraintLayout>
