--- a/app/src/main/res/layout/bank_list_item.xml
+++ b/app/src/main/res/layout/bank_list_item.xml
@@ -22,10 +22,10 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvBankName"
+                android:id="@+id/tvCardName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bank Name"
+                android:text="Card Name"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textColor="@color/black"
