--- a/app/src/main/res/layout/activity_food_details.xml
+++ b/app/src/main/res/layout/activity_food_details.xml
@@ -4,19 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CardDetailsActivity">
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="410dp"
-        android:layout_height="518dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="448dp"
-        android:src="@drawable/green"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+    tools:context=".activities.FoodDetailsActivity">
 
     <TextView
         android:id="@+id/textView3"
@@ -54,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="147dp"
         android:text="Update"
-        android:backgroundTint="@color/darkyello"
+        android:backgroundTint="@color/yellow"
         app:layout_constraintEnd_toStartOf="@+id/btnDelete"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +76,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/wintergreen"
+                android:background="@color/background"
                 android:visibility="invisible">
 
                 <TextView
@@ -109,7 +97,7 @@
                 android:visibility="invisible">
 
                 <TextView
-                    android:id="@+id/tvCardId"
+                    android:id="@+id/tvDonateId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -139,14 +127,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/wintergreen">
+                android:background="@color/background">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Card Name"
+                    android:text="Donate Name"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
 
@@ -158,7 +146,7 @@
                 android:layout_weight="1.4">
 
                 <TextView
-                    android:id="@+id/tvCardName"
+                    android:id="@+id/tvDonateName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -189,14 +177,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/wintergreen">
+                android:background="@color/background">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Card Number"
+                    android:text="Donate Date"
                     android:textColor="@color/black"
                     android:textSize="15sp"
 
@@ -211,7 +199,7 @@
                 android:layout_weight="1.4">
 
                 <TextView
-                    android:id="@+id/tvCardNumber"
+                    android:id="@+id/tvDonateDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -243,7 +231,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/wintergreen">
+                android:background="@color/background">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -251,7 +239,7 @@
                     android:layout_gravity="center"
 
                     android:gravity="center"
-                    android:text="Card Date"
+                    android:text="Donate Time"
                     android:textColor="@color/black"
                     android:textSize="15sp"
 
@@ -266,7 +254,7 @@
                 android:layout_weight="1.4">
 
                 <TextView
-                    android:id="@+id/tvCardDate"
+                    android:id="@+id/tvDonateTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -297,7 +285,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.6"
-                android:background="@color/wintergreen">
+                android:background="@color/background">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -305,7 +293,7 @@
                     android:layout_gravity="center"
 
                     android:gravity="center"
-                    android:text="Card Cvv"
+                    android:text="Donate Food"
                     android:textColor="@color/black"
                     android:textSize="15sp"
 
@@ -320,7 +308,7 @@
                 android:layout_weight="1.4">
 
                 <TextView
-                    android:id="@+id/tvCardCvv"
+                    android:id="@+id/tvDonateFood"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
