--- a/app/src/main/res/layout/activity_food_fetching.xml
+++ b/app/src/main/res/layout/activity_food_fetching.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CardFetchingActivity">
+    tools:context=".activities.FoodFetchingActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvEmp"
@@ -14,7 +14,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
-        tools:listitem="@layout/card_list_item"
+        tools:listitem="@layout/food_list_item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
