--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,27 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity" >
+    tools:context=".activities.MainActivity"
+    android:background="@color/white">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/imageView"
+        android:layout_width="222dp"
+        android:layout_height="185dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="79dp"
+        android:layout_marginEnd="104dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/card" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="482dp"
-        android:layout_height="370dp"
-        android:layout_marginBottom="450dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/payback" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/foodbg" />
 
     <TextView
         android:id="@+id/textView"
@@ -32,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="132dp"
         android:gravity="center"
-        android:text="Manage All Payments"
+        android:text="Donate Food and Save Lives"
         android:textColor="@color/black"
         android:textSize="28sp"
         android:textStyle="bold"
@@ -45,15 +38,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="337dp"
         android:layout_marginEnd="89dp"
-        android:backgroundTint="@color/black"
 
-        android:text="Add Account"
+        android:layout_marginBottom="64dp"
+        android:backgroundTint="@color/yellow"
+        android:text="Add Donation"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnFetchData"
-        app:layout_constraintHorizontal_bias="0.243"
+        app:layout_constraintHorizontal_bias="0.276"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btnFetchData"
@@ -61,8 +56,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="64dp"
-        android:backgroundTint="@color/black"
-        android:text="View Accounts"
+        android:backgroundTint="@color/yellow"
+        android:text="View Donation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
